[package]
name = "attobyte"
version = "0.1.0"
edition = "2021"

[dependencies]
hash32 = "0.3.1"

[dev-dependencies]
criterion = "0.5.1"
rand = "0.8.5"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"

[profile.bench]
opt-level = 2
codegen-units = 1

[[bench]]
name = "insert_update"
harness = false

[[bench]]
name = "serialize"
harness = false
